# agent-harness

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
configs/: sample.harness.config.yaml
playground/: demo.mjs  demo.ts
python/: pyproject.toml
python/evaluator/src/: __init__.py  diff_scope.py  isolated_exec.py  verifier.py
python/evaluator/tests/: test_diff_scope.py  test_isolated_exec.py  test_verifier.py
python/router/src/: __init__.py  analyzer.py  models.py  scorer.py
python/router/tests/: test_analyzer.py  test_scorer.py
python/server/src/: __init__.py  app.py  config.py  dashboard_api.py  init.py  persistence.py
python/server/tests/: test_bridge_integration.py  test_config.py  test_dashboard_api.py  test_init.py  test_persistence.py
schemas/: agent-capability.schema.json  daily-progress.schema.json  harness-config.schema.json  repo-profile.schema.json  routing-decision.schema.json  task.schema.json  verification-result.schema.json  workflow-run.schema.json
